Update to Forge 40.2.4